plugins {
    id 'java'
}

group 'me.sunstorm'
version '2.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'libs/', include: '*.jar')

    implementation group: 'com.googlecode.soundlibs', name: 'jlayer',                  version: '1.0.1.4'
    implementation group: 'com.google.code.gson',     name: 'gson',                    version: '2.8.7'
    implementation group: 'com.google.guava',         name: 'guava',                   version: '30.1.1-jre'
    implementation(group: 'com.illposed.osc',         name: 'javaosc-core',            version: '0.8') {
        exclude group: 'org.slf4j'
    }
    implementation group: 'io.javalin',               name: 'javalin',                 version: '3.13.11'
    implementation group: 'javax.xml.bind',           name: 'jaxb-api',                version: '2.3.1'
    implementation group: 'net.minecrell',            name: 'terminalconsoleappender', version: '1.2.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core',              version: '2.14.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api',               version: '2.14.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl',        version: '2.14.1'
    implementation group: 'org.slf4j',                name: 'slf4j-api',               version: '1.7.31'
    implementation group: 'redis.clients',            name: 'jedis',                   version: '3.6.1'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

test {
    useJUnitPlatform()
}